feat: Added apis to join and exit from events
